update info, add JK page

--- a/firebase.json
+++ b/firebase.json
@@ -9,11 +9,15 @@
   },
   "emulators": {
     "hosting": {
-      "port": 8000
+      "port": 8000,
+      "host": "127.0.0.1"
     },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "hosting": {
+        "port": 4500
+      }
     },
-    "singleProjectMode": true
+    "singleProjectMode": false
   }
 }
