try new cashe control

--- a/firebase.json
+++ b/firebase.json
@@ -5,8 +5,20 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "**/*.css",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
     ]
   },
+
   "emulators": {
     "hosting": {
       "port": 8000,
